--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
+        "brianfp/lumen-world": "^1.0",
         "flipbox/lumen-generator": "^7.0",
         "laravel/lumen-framework": "^7.0",
         "league/fractal": "^0.19.2",
