--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.2.5",
         "brianfp/lumen-world": "^1.0",
         "flipbox/lumen-generator": "^7.0",
+        "intervention/image": "^2.5",
         "laravel/lumen-framework": "^7.0",
         "league/fractal": "^0.19.2",
         "tymon/jwt-auth": "dev-develop"
