--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "intervention/image": "^2.5",
         "laravel/lumen-framework": "^7.0",
         "league/fractal": "^0.19.2",
+        "nesbot/carbon": "^2.43",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
